      mod2.asm.
   -  operator '/': 64-bit division generally assumed signed operands, hence
      results were wrong if dividend was unsigned with bit 63 set.
   -  elf format: in symbol table, size wasn't set for data publics.

   Other changes:
   -  format elf: cmdline option -Zd (dwarf line numbers) supported (limited
      to one file).
   -  format elf64: added cmdline option -pic{0|1|2}; position-independent code
      generation is now the default for elf64.

   01.12.2025, v2.20:

   Bugfixes:
   -  warning level 3 about prologue not triggered at PROC start may have
      caused a crash; see prolog4.asm.
   -  .model directive: os qualifier (OS_DOS,OS_OS2) never worked; see
      startup5.asm.
   -  pushd: no opsize prefix generated in 16-bit code; see pushwd.asm.
   -  pushw: memory operands were rejected; see pushwd.asm.
   -  regression in v2.19: option -Sg without option -Fl caused a GPF.
   -  string literals used as record field initializers gave error 'constant
      expected'; see record6.asm.
   -  no warning was emitted if initialized record data items in BSS segments
      were detected; see record7.asm.
   -  empty record initializer literal may have triggered error "constant
      value too large" since code wasn't adjusted to 64-bit records yet.

   Other changes:
   -  sample Win32_5 updated in manual.html.
   -  OPTION CODEVIEW got another switch, to suppress line number generation
      for segments that don't have class 'CODE'.
   -  option -pe: IAT entry generation now triggered by EXTERNDEF, not
      by INVOKE; see pe13.asm, pe14.asm.
   -  new option -Zli, format pe only: generates thunks to call import
      addresses in the IAT; see pezli.asm.
   -  Open Watcom DOS32 target: added check in C startup code for DOS extender
      presence.
   -  record initializer literals now accepted in expressions; see record5.asm.

   24.01.2025, v2.19:

   Bugfixes:
   -  format mz: stack segment was never written - a fault if it isn't